Content (C) Jorn Wildt 2007
---------------------------
http://code.zikula.org/content

Version 3.1.0
-------------
* IMPORTANT       - Security schema has now been changed to lowercase "content::"  !!!
* Add #15         - MultiHook Needle support
* Add #57         - Support for Google Sitemaps
* Add #51         - Vimeo contenttype
* Add #86         - More css-classes for each contenttype
* Add #68         - Add second and third level of Sub-Headings
* Fix #78         - Converted module to gettext
* Fix #49         - Fixed bug in paragraph-modifier
* Fix #76         - Drag&Drop not working in MSIE
* Fix #65         - Missed translation
* Fix #24/#60     - Module not showing in admin-panel
* Fix #53/#61/#72 - Removed SimplePie and backend errors
* Fix #85         - Replaced lightboxXL and greybox with Lightwindow
* Fix #77         - Page title gets sanitized twice
* Fix #80         - If short URL suffix was empty, short URL didn't work
* Fix #71         - Problems with directory-based shorturls
* Fix #59         - Caching bug in menu blocks
* Fix #87         - Removed Circavie.com plugin
* Fix #89         - wrong slideshare regex

Version 3.0.0
-------------
* Added versioning with complete version history
* Added check for BBCode in text plugin
* Added plugin overview in configuration
* Added 1 column layout without header area
* Added Circavie.com plugin
* Works with Scribite 3.x
* Hiding translation links to avoid translating from language X to X
* Added module selector to module content plugin
* Add #40 - Added max. no. of items for RSS plugins
* Add #5  - Display page language
* Add #37 - Add link to admin settings
* Fix #18 - Drop history table when module deleted
* Fix #42 - menu block must ignore "invisible" pages

UPGRADE INSTRUCTIONS:
  Make sure current language is the same language as your content items are
  written in. During upgrade all content items will be associated with the
  current language (all translations are kept intact).


Version 2.1.0